--- a/focusbear-frontend/package.json
+++ b/focusbear-frontend/package.json
@@ -40,7 +40,8 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "^13.4.0",
     "react-native-web": "~0.19.10",
-    "tailwindcss": "^3.4.12"
+    "tailwindcss": "^3.4.12",
+    "expo-image": "~1.12.15"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
