--- a/focusbear-backend/docker-compose.yml
+++ b/focusbear-backend/docker-compose.yml
@@ -15,16 +15,16 @@ services:
     container_name: postgres
     restart: always
     environment:
+      POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       TZ: 'GMT'
       PGTZ: 'GMT'
+      POSTGRES_DB: focusbear
     ports:
       - '5432:5432'
     volumes:
       - postgres:/data/postgres
-      - ./init-data.sh:/docker-entrypoint-initdb.d/init-data.sh
-    env_file:
-      - .env
+
   pgadmin:
     container_name: pgadmin
     image: dpage/pgadmin4
