--- a/focusbear-frontend/package.json
+++ b/focusbear-frontend/package.json
@@ -27,12 +27,14 @@
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
+    "expo-image": "~1.12.15",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "lucide-react-native": "^0.445.0",
     "nativewind": "4.0.36",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -44,8 +46,7 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "^13.4.0",
     "react-native-web": "~0.19.10",
-    "tailwindcss": "^3.4.12",
-    "expo-image": "~1.12.15"
+    "tailwindcss": "^3.4.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
